hard-gists/d1426ffad93b786e035e/run.log
=== Docker Run Log for d1426ffad93b786e035e ===
Started at: Mi 29. Okt 20:21:50 CET 2025

[2025-10-29 20:21:50] START: Running container for d1426ffad93b786e035e
[2025-10-29 20:21:50] SUCCESS: Container b376b8efc4de92ce2e2f704ca3f62b961b1f11378ff69d4109489898b5a8160e started for d1426ffad93b786e035e
=== Container logs for d1426ffad93b786e035e ===
  File "/snippet.py", line 41
    print template.render(c)
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d1426ffad93b786e035e ===
[2025-10-29 20:21:52] INFO: Container b376b8efc4de92ce2e2f704ca3f62b961b1f11378ff69d4109489898b5a8160e has stopped
